Modification des fichiers .sh et .cpp pour le déplacement des personnes sur le terrain

--- a/projet/Makefile
+++ b/projet/Makefile
@@ -16,32 +16,39 @@ LINKER =g++
 #options for linker and compiler
 FLAGS =-g -ansi -Wall -Wextra -Wold-style-cast -Woverloaded-virtual -D_DEBUG_ -std=c++11
 
-EXE_NAME = toto.exe
+EXE_NAME = main.exe
 
 #can have several ones separated by spaces, only cpp files
-SOURCES = src/main.cpp src/personne.cpp src/terrain.cpp
+SOURCES = main.cpp personne.cpp terrain.cpp
 
+SRCDIR = src
+BINDIR = bin
 
 #PATH to extra header used in the project (when using libs not installed in the OS)
 INC_PATHS= -I 
-
+OBJ = $(COMPILER) -c -I ./src/include
 
 #extra libs used in the project (for instance -lpthread)
 LIBS	= -L 
 
 GRAPH = `pkg-config --libs --cflags sfml-system sfml-window sfml-graphics sfml-audio sfml-network`
 
-LINKOBJ	= $(SOURCES:.cpp=.o)
-SOURCEHEADERS = $(SOURCES:.cpp=./include/.h)
+#LINKOBJ	= $(SOURCES:.cpp=.o)
+#SOURCEHEADERS = $(SOURCES:.cpp=./include/.h)
 
 avec: $(EXE_NAME)
 
-$(EXE_NAME): $(LINKOBJ)
-	$(LINKER) $(LINKOBJ) $(INC_PATHS) $(LIBS) -o $(EXE_NAME) $(GRAPH) $(FLAGS)
+$(EXE_NAME): main.o
+	$(COMPILER) -o $(BINDIR)/$(EXE_NAME) $(BINDIR)/*.o $(GRAPH) $(FLAGS)
 
-%.o: %.cpp %.h
-	$(COMPILER) -g -c $< -o $@ $(INC_PATHS) $(FLAGS)
+main.o: terrain.o personne.o
+	$(OBJ) -o $(BINDIR)/main.o $(SRCDIR)/main.cpp
 
-# cleanup
+terrain.o: personne.o 
+	$(OBJ) -o $(BINDIR)/terrain.o $(SRCDIR)/terrain.cpp
+
+personne.o:
+	$(OBJ) -o $(BINDIR)/personne.o $(SRCDIR)/personne.cpp
+
 clean:
-	rm -f $(LINKOBJ)
+	rm -f $(BINDIR)/*.o $(BINDIR)/$(EXE_NAME)
