--- a/projet/Makefile
+++ b/projet/Makefile
@@ -19,7 +19,7 @@ FLAGS =-g -ansi -Wall -Wextra -Wold-style-cast -Woverloaded-virtual -D_DEBUG_ -s
 EXE_NAME = main.exe
 
 #can have several ones separated by spaces, only cpp files
-SOURCES = main.cpp personne.cpp terrain.cpp mythreads.cpp
+SOURCES = main.cpp personne.cpp terrain.cpp mythreads.cpp contexte.cpp
 
 SRCDIR = src
 BINDIR = bin
@@ -37,7 +37,7 @@ sans: $(EXE_NAME)
 $(EXE_NAME): main.o
 	$(COMPILER) -o $(BINDIR)/$(EXE_NAME) $(BINDIR)/*.o $(LIBS) $(FLAGS)
 
-main.o: terrain.o personne.o mythreads.o
+main.o: terrain.o personne.o mythreads.o contexte.o
 	$(OBJ) -o $(BINDIR)/main.o $(SRCDIR)/main.cpp --std=c++11
 
 terrain.o: personne.o 
@@ -48,6 +48,9 @@ personne.o:
 
 mythreads.o:
 	$(OBJ) -o $(BINDIR)/mythreads.o $(SRCDIR)/mythreads.cpp
+
+contexte.o:
+	$(OBJ) -std=c++11 -o $(BINDIR)/contexte.o $(SRCDIR)/contexte.cpp
 
 clean:
 	rm -f $(BINDIR)/*.o $(BINDIR)/$(EXE_NAME)
